# fastapi

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  traefik.tls.yml
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  deployment.yml  release.yml  testing.yml
fastid/: app.py  context.py  depends.py  exceptions.py  http_base_client.py  logger.py  middlewares.py  password_hasher.py  redis_client.py  settings.py  trace.py  typing.py
fastid/command/: __init__.py  create_admin.py  user.py
fastid/handlers/: __init__.py  healthcheck.py  oauth.py
fastid/internal/: __init__.py  config.py  models.py  users.py
fastid/repositories/: __init__.py  applications.py  config.py  db.py  otp.py  schemes.py  session.py  tokens.py  users.py
fastid/services/: __init__.py  admin.py  auth.py  config.py  language.py  models.py  oauth.py  otp.py  password_hasher.py  recaptcha.py  sendmail.py  session.py  timezone.py  tokens.py  user.py  users.py
fastid/static/: asset-manifest.json  index.html  manifest.json
fastid/static/locales/en/: translation.json
fastid/static/locales/ru/: translation.json
fastid/static/static/js/: main.053c835a.js  main.3f61032b.js
fastid/static/static/media/: getFetch.40f37ddea2378391108f.cjs
fastid/templates/email/: signup.html  template.html
fastid/v1/: __init__.py  admin.py  auth.py  config.py  models.py  schemes.py  users.py
migrations/: env.py
migrations/versions/: 10e97dfc7fbf_first_commit.py  608d488a455f_first_commit.py  60f64b35e617_first_commit.py  82f9f65f3ffa_first_commit.py  91d2b189df86_first_commit.py  fe2d24637c77_initial.py
tests/: conftest.py  exception_test.py  http_base_client_test.py  password_hasher_test.py  redis_test.py  trace_test.py
tests/command/: create_admin_test.py  user_test.py
tests/handlers/: healthcheck_test.py  oauth_test.py  static_test.py
tests/internal/: config_test.py  users_test.py
tests/repositories/: applications_test.py  config_test.py  conftest.py  db_test.py  otp_test.py  session_test.py  tokens_test.py  user_test.py
tests/services/: admin_test.py  config_test.py  conftest.py  language_test.py  otp_test.py  password_hasher_test.py  recaptcha_test.py  sendmail_test.py  session_test.py  timezone_test.py  tokens_test.py  users_test.py
tests/v1/: admin_test.py  auth_test.py  config_test.py  user_test.py  users_test.py
