[tool.poetry]
name = "FastID"
version = "0.0.1"
description = "Authorization and authentication service"
authors = ["Kostya Ten <kostya@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.1"}
httpx = {extras = ["http2"], version = "^0.24.1"}
uvicorn = "^0.23.2"
asgi-lifespan = "^2.1.0"
python-json-logger = "^2.0.7"
opentelemetry-exporter-otlp-proto-grpc = "^1.19.0"
sqlalchemy = {extras = ["asyncio", "aiosqlite"], version = "^2.0.19"}
asyncpg = "^0.28.0"
install = "^1.3.5"
prometheus-fastapi-instrumentator = "^6.1.0"
phonenumbers = "^8.13.17"
alembic = "^1.11.1"
argon2-cffi = "^21.3.0"
pyjwt = "^2.8.0"
aiosmtplib = "^2.0.2"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-env = "^0.8.2"
coverage = {extras = ["toml"], version = "^7.2.7"}
pytest-httpx = "^0.22.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.18"}
setuptools = "^68.0.0"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.280"
pytest-mock = "^3.11.1"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
testpaths = [
    "tests",
]
env = [
    "PYTEST = True",
    "recaptcha_enable = True",
    "cors_enable = True"
]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:google.rpc.*"
]

[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "venv",
    ".nox",
    ".mypy_cache",
    ".data",
]
per-file-ignores = {"__init__.py" = ["F401"]}
select = [
    "I", "N", "ASYNC", "B", "A", "COM", "C4", "DTZ", "T10", "EXE", "FA", "ISC",
    "ICN", "PIE", "Q", "RSE", "RET", "SLF", "TD", "FIX", "F",
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"
