[tool.poetry]
name = "FastID"
version = "0.0.1"
description = "Authorization and authentication service"
authors = ["Kostya Ten <kostya@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.104.0"}
httpx = {extras = ["http2"], version = "^0.25.0"}
uvicorn = "^0.23.2"
asgi-lifespan = "^2.1.0"
python-json-logger = "^2.0.7"
opentelemetry-exporter-otlp-proto-grpc = "^1.20.0"
sqlalchemy = {extras = ["asyncio", "aiosqlite"], version = "^2.0.22"}
asyncpg = "^0.28.0"
install = "^1.3.5"
prometheus-fastapi-instrumentator = "^6.1.0"
phonenumbers = "^8.13.23"
alembic = "^1.12.0"
argon2-cffi = "^23.1.0"
pyjwt = "^2.8.0"
aiosmtplib = "^2.0.2"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
greenlet = "^3.0.0"
sentry-sdk = {extras = ["fastapi", "sqlalchemy", "httpx"], version = "^1.32.0"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-env = "^1.0.1"
coverage = {extras = ["toml"], version = "^7.3.2"}
pytest-httpx = "^0.26.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.21"}
setuptools = "^68.2.2"
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.292"
pytest-mock = "^3.11.1"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
testpaths = [
    "tests",
]
env = [
    "PYTEST = True",
    "recaptcha_enable = True",
    "cors_enable = True"
]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:google.rpc.*"
]

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "venv",
    ".nox",
    ".mypy_cache",
    ".data",
]

#per-file-ignores = {"__init__.py" = ["F401"]}

select = [
    "I", "N", "ASYNC", "B", "A", "COM", "C4", "DTZ", "T10", "EXE", "FA", "ISC",
    "ICN", "PIE", "Q", "RSE", "RET", "SLF", "TD", "FIX", "F",
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"
